; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/dpaa/extr_fman_fdt.c_fman_fdt_probe.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/dpaa/extr_fman_fdt.c_fman_fdt_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"fsl,fman\00", align 1
@ENXIO = common dso_local global i32 0, align 4
@FFMAN_DEVSTR = common dso_local global i32 0, align 4
@BUS_PROBE_DEFAULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @fman_fdt_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fman_fdt_probe(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @ofw_bus_is_compatible(i32 %4, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %9, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @ENXIO, align 4
  store i32 %8, i32* %2, align 4
  br label %14

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @FFMAN_DEVSTR, align 4
  %12 = call i32 @device_set_desc(i32 %10, i32 %11)
  %13 = load i32, i32* @BUS_PROBE_DEFAULT, align 4
  store i32 %13, i32* %2, align 4
  br label %14

14:                                               ; preds = %9, %7
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @ofw_bus_is_compatible(i32, i8*) #1

declare dso_local i32 @device_set_desc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
